@@ -129,7 +129,6 @@ namespace System.Threading {
 #endif		
 		
 		private IPrincipal _principal;
-		internal NumberFormatter _numberFormatter;
 
 		public static Context CurrentContext {
 			[SecurityPermission (SecurityAction.LinkDemand, Infrastructure=true)]
@@ -246,18 +245,6 @@ namespace System.Threading {
 				local_slots = slots;
 			}
 			slots [slot.slot] = data;
-		}
-
-		internal NumberFormatter AcquireNumberFormatter() {
-			NumberFormatter res = _numberFormatter;
-			_numberFormatter = null;
-			if (res == null)
-				return new NumberFormatter (this);
-			return res;
-		}
-
-		internal void ReleaseNumberFormatter (NumberFormatter formatter) {
-			_numberFormatter = formatter;
 		}
 
 		public static AppDomain GetDomain() {
@@ -430,8 +417,7 @@ namespace System.Threading {
 						//
 						SetCachedCurrentCulture (culture);
 						in_currentculture = false;
-						if (_numberFormatter != null)
-							_numberFormatter.CurrentCulture = culture;
+						NumberFormatter.SetThreadCurrentCulture (culture);
 						return culture;
 					}
 				}
@@ -450,8 +436,7 @@ namespace System.Threading {
 					in_currentculture = false;
 				}
 
-				if (_numberFormatter != null)
-					_numberFormatter.CurrentCulture = culture;
+				NumberFormatter.SetThreadCurrentCulture (culture);
 				return culture;
 			}
 			
@@ -487,8 +472,7 @@ namespace System.Threading {
 				} finally {
 					in_currentculture = false;
 				}
-				if (_numberFormatter != null)
-					_numberFormatter.CurrentCulture = value;
+				NumberFormatter.SetThreadCurrentCulture (value);
 			}
 		}
 
