@@ -1,5 +1,10 @@
 2009-04-18  Mark Probst  <mark.probst@gmail.com>
 
+	* NumberFormatter.cs: Keep the current thread's number formatter
+	as a ThreadStatic member.
+
+2009-04-18  Mark Probst  <mark.probst@gmail.com>
+
 	* Environment.cs: Bump corlib version.
 
 2009-04-12 Gonzalo Paniagua Javier <gonzalo@novell.com>
